@@ -31,7 +31,7 @@ dnl ============================================================
 dnl ============================================================
 AC_MSG_CFG_PART(Init Automake environment)
 
-AM_INIT_AUTOMAKE(svgc, 1.0.3)
+AM_INIT_AUTOMAKE(svgc, 1.0.4)
 
 AM_CONFIG_HEADER(config.h)
 
