@@ -1,0 +1,41 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=iso-8859-5">
+</head>
+<body link="#333333" vlink="#666666" alink="#000066">
+
+                  <div
+ style="font-size: 12px; margin-left: 8px; margin-right: 4px; margin-top: 6px; margin-bottom: 8px; text-align: justify;">
+
+<p>
+Text:
+</p>
+
+
+<p>
+ <table border="0" cellspacing="0" cellpadding="0" style="width: 100%;">
+   <tbody>
+     <tr>
+       <td style="text-align: center;">
+<object type="image/svg+xml" data="M.svg" width="800" height="400">
+Your browser is currently unable to display SVG images.
+</object>
+       </td>
+       <td style="text-align: right; width: 20px;">
+<!-- index -->
+       </td>
+     </tr>
+   </tbody>
+ </table>
+</p>
+
+
+<p>
+End.
+</p>
+
+                  </div>
+
+</body>
+</html>
