@@ -8,7 +8,7 @@
 #ifndef _VERSION_C_
 #define _VERSION_C_
 
-#define _SVGC_VERSION 0x100203
+#define _SVGC_VERSION 0x100204
 
 typedef struct {
     const int   v_hex;
@@ -32,14 +32,14 @@ extern _svgc_version_t _svgc_version;
 #undef  _VERSION_C_AS_HEADER_
 
 _svgc_version_t _svgc_version = {
-    0x100203,
-    "1.0.3",
-    "1.0.3 (09-Jan-2011)",
-    "This is _svgc, Version 1.0.3 (09-Jan-2011)",
-    "_svgc 1.0.3 (09-Jan-2011)",
-    "_svgc/1.0.3",
-    "@(#)_svgc 1.0.3 (09-Jan-2011)",
-    "$Id: _svgc 1.0.3 (09-Jan-2011) $"
+    0x100204,
+    "1.0.4",
+    "1.0.4 (09-Jan-2011)",
+    "This is _svgc, Version 1.0.4 (09-Jan-2011)",
+    "_svgc 1.0.4 (09-Jan-2011)",
+    "_svgc/1.0.4",
+    "@(#)_svgc 1.0.4 (09-Jan-2011)",
+    "$Id: _svgc 1.0.4 (09-Jan-2011) $"
 };
 
 #endif /* _VERSION_C_AS_HEADER_ */
